RESOLVED FIXED92489
[EFL] Dump a backtrace in case of a crash
https://bugs.webkit.org/show_bug.cgi?id=92489
Summary [EFL] Dump a backtrace in case of a crash
Thiago Marcos P. Santos
Reported 2012-07-27 04:26:31 PDT
Should be useful for quickly identify the cause of the crash on the bots.
Attachments
Patch (2.77 KB, patch)
2012-07-27 04:50 PDT, Thiago Marcos P. Santos
no flags
Patch (3.12 KB, patch)
2012-07-30 13:58 PDT, Thiago Marcos P. Santos
no flags
Patch (3.15 KB, patch)
2012-07-31 07:42 PDT, Thiago Marcos P. Santos
no flags
Patch (3.09 KB, patch)
2012-07-31 12:45 PDT, Thiago Marcos P. Santos
no flags
Thiago Marcos P. Santos
Comment 1 2012-07-27 04:43:56 PDT
Adding you guys because I'm going to use your code. :)
Thiago Marcos P. Santos
Comment 2 2012-07-27 04:50:12 PDT
Simon Hausmann
Comment 3 2012-07-27 07:06:38 PDT
Comment on attachment 154907 [details] Patch Is this code worth sharing within WTR/InjectedBundle?
Thiago Marcos P. Santos
Comment 4 2012-07-27 07:43:16 PDT
(In reply to comment #3) > (From update of attachment 154907 [details]) > Is this code worth sharing within WTR/InjectedBundle? If it is for sharing, I suggest moving it to WTF, because would like to install the same signal handlers for Tools/TestWebKitAPI/efl/InjectedBundleController.cpp. What do you think?
Balazs Kelemen
Comment 5 2012-07-27 07:48:38 PDT
(In reply to comment #4) > (In reply to comment #3) > > (From update of attachment 154907 [details] [details]) > > Is this code worth sharing within WTR/InjectedBundle? > > If it is for sharing, I suggest moving it to WTF, because would like to install the same signal handlers for Tools/TestWebKitAPI/efl/InjectedBundleController.cpp. > > What do you think? Moving it to a WTF helper seems reasonable to me, basically we use the same stuff everywhere: DRT, InjectedBundle, TestAPI.
Thiago Marcos P. Santos
Comment 6 2012-07-27 08:41:11 PDT
Comment on attachment 154907 [details] Patch Clearing the flags, I'm going to rework this bug.
Thiago Marcos P. Santos
Comment 7 2012-07-30 13:58:40 PDT
Gyuyoung Kim
Comment 8 2012-07-30 15:10:48 PDT
Thiago Marcos P. Santos
Comment 9 2012-07-31 07:42:09 PDT
Gyuyoung Kim
Comment 10 2012-07-31 07:46:45 PDT
Thiago Marcos P. Santos
Comment 11 2012-07-31 09:56:45 PDT
Comment on attachment 155533 [details] Patch Dependency has landed. It is safe to merge now.
Csaba Osztrogonác
Comment 12 2012-07-31 09:58:09 PDT
Comment on attachment 155533 [details] Patch rs=me.
WebKit Review Bot
Comment 13 2012-07-31 11:38:53 PDT
Comment on attachment 155533 [details] Patch Rejecting attachment 155533 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ce/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 [GStreamer] Live stream support is weak When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output: http://queues.webkit.org/results/13411053
Thiago Marcos P. Santos
Comment 14 2012-07-31 12:45:12 PDT
WebKit Review Bot
Comment 15 2012-07-31 13:30:46 PDT
Comment on attachment 155608 [details] Patch Clearing flags on attachment: 155608 Committed r124244: <http://trac.webkit.org/changeset/124244>
WebKit Review Bot
Comment 16 2012-07-31 13:30:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.