[EFL] Dump a backtrace in case of a crash https://bugs.webkit.org/show_bug.cgi?id=92489

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-07-31
Reviewed by Csaba Osztrogonác.

Dump a stack trace in case of a unexpected signal. This should
provide a better report at the build bots when WTR crashes.

* DumpRenderTree/efl/DumpRenderTree.cpp:
(main):
* TestWebKitAPI/efl/InjectedBundleController.cpp:
(TestWebKitAPI::InjectedBundleController::platformInitialize):
* WebKitTestRunner/InjectedBundle/efl/InjectedBundleEfl.cpp:
(WTR::InjectedBundle::platformInitialize):

Canonical link: https://commits.webkit.org/110619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124244 268f45cc-cd09-0410-ab3c-d52691b4dbfc